# hyperspot

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  release-plz.toml
.github/workflows/: ci.yml  e2e.yml
apps/hyperspot-server/src/: main.rs
docs/unified-error-system/: CATALOG.md  DESIGN.md  PRD.md
docs/unified-error-system/ADR/: 0001-cpt-cf-ues-adr-gts-identifiers.md  0003-cpt-cf-ues-adr-gts-error-macro.md  0004-cpt-cf-ues-adr-security-first.md
dylint_lints/: Cargo.toml
examples/modkit/users-info/users-info/: Cargo.toml
examples/plugin-modules/tenant-resolver/tenant-resolver-gw/: Cargo.toml
libs/modkit/: Cargo.toml
libs/modkit-auth/src/: validation.rs
libs/modkit-errors/: Cargo.toml
libs/modkit-errors/src/: catalog.rs  gts_error.rs  lib.rs  problem.rs
libs/modkit-odata/: Cargo.toml
libs/modkit-odata/src/: errors.rs  problem_mapping.rs
libs/modkit/src/: lib.rs  result.rs
libs/modkit/src/api/: error_layer.rs  mod.rs  odata.rs  operation_builder.rs  problem.rs  trace_layer.rs
libs/modkit/src/bootstrap/: oop.rs
modules/file-parser/: Cargo.toml
modules/file-parser/src/: errors.rs  lib.rs
modules/mini-chat/docs/: DESIGN.md  PRD.md  openapi.json
modules/simple-user-settings/openspec/: project.md
modules/simple-user-settings/simple-user-settings/: Cargo.toml
modules/simple-user-settings/simple-user-settings-sdk/src/: api.rs  lib.rs
modules/simple-user-settings/simple-user-settings/src/: errors.rs  lib.rs  local_client.rs  module.rs
modules/system/api-gateway/tests/: mime_validation_integration.rs
modules/system/oagw/oagw/: Cargo.toml
(+30 files in other folders)
